<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/themes"
        android:title="@string/themes" />
    <item
        android:id="@+id/location"
        android:title="@string/location" />
    <item
        android:id="@+id/azan"
        android:title="AZAN" />
    <item
        android:id="@+id/reklam"
        android:title="Reklam" />
    <item
        android:id="@+id/mosques"
        android:title="MOSQUES" />
    <item
        android:id="@+id/share_app"
        android:title="@string/share" />
    <item
        android:id="@+id/rate_app"
        android:title="@string/rate" />
    <item
        android:id="@+id/about_app"
        android:title="@string/about_app" />
    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us" />

</menu>